--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,6 +13,7 @@ body {
     font-weight: 300;
     font-size: 16px;
     color: #555;
+    min-width:1000px;
 
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
